[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Creatures/Creature.gd" type="Script" id=1]
[ext_resource path="res://Styles/GameNameFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sprites/UI/EmptyBar.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/GreenBar.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/Speech.png" type="Texture" id=5]
[ext_resource path="res://Fonts/basis33.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Sprites/UI/SpeechAdditional.png" type="Texture" id=7]

[sub_resource type="StyleBoxTexture" id=1]

content_margin_left = 3.0
content_margin_right = 3.0
content_margin_top = 3.0
content_margin_bottom = 3.0
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 14, 13 )
margin_left = 3.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 3.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Axis Stretch", "Content Margin", "Margin" ]

[sub_resource type="DynamicFont" id=2]

size = 12
use_mipmaps = false
use_filter = true
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[node name="Creature" type="KinematicBody2D"]

position = Vector2( 503.016, 274.934 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
game_name = ""
damage = Vector2( 1, 1 )

[node name="Body" type="Sprite" parent="." index="0"]

editor/display_folded = true
position = Vector2( -1, 0 )
vframes = 21
hframes = 13
frame = 261
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Visibility", "Z Index" ]

[node name="Animation" type="AnimationPlayer" parent="Body" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="VisibleArea" type="Area2D" parent="." index="1"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Collision" type="CollisionShape2D" parent="VisibleArea" index="0"]

[node name="InterractArea" type="Area2D" parent="." index="2"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="Collision" type="CollisionShape2D" parent="InterractArea" index="0"]

_sections_unfolded = [ "Transform" ]

[node name="Name" type="Label" parent="." index="3"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -78.0
margin_right = 12.0
margin_bottom = -64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "custom_fonts" ]

[node name="HealthBar" type="TextureProgress" parent="." index="4"]

editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -64.0
margin_right = -9.0
margin_bottom = -53.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 3 )
texture_over = null
texture_progress = ExtResource( 4 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
_sections_unfolded = [ "Radial Fill", "Textures" ]

[node name="DisplayTimer" type="Timer" parent="HealthBar" index="0"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="Collision" type="CollisionShape2D" parent="." index="5"]

position = Vector2( -1.1722, 26.9568 )
rotation = 1.5708
_sections_unfolded = [ "Transform" ]

[node name="Speech" type="Control" parent="." index="6"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -15.0
margin_top = -72.0
margin_right = 85.0
margin_bottom = -29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
__meta__ = {
"_edit_group_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="Speech" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Rect", "custom_fonts", "custom_styles" ]

[node name="AdditionalTexture" type="TextureRect" parent="Speech" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 11.0
margin_top = 27.0
margin_right = 29.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="DisplayTimer" type="Timer" parent="Speech" index="2"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[connection signal="animation_finished" from="Body/Animation" to="." method="_on_animation_finished"]

[connection signal="timeout" from="HealthBar/DisplayTimer" to="." method="_on_HealthBar_DisplayTimer_timeout"]

[connection signal="timeout" from="Speech/DisplayTimer" to="." method="_on_Speech_DisplayTimer_timeout"]


